--- a/.env
+++ b/.env
@@ -6,13 +6,13 @@
 
 # DATABASE_URL="file:./dev.db"
 
-BASE_URL=https://bimbel.fungsional.id/server
+BASE_URL=https://fungsional.ujian.or.id/server
 DATABASE_URL="mysql://root:Kucing12qwaszx34erdfcv!@localhost:3306/fungsionalapp"
 # DATABASE_URL="mysql://fungsionalapp:Bismillah23%40@localhost:3306/fungsionalapp"
 PORT=8002
 JWT_SECRET=password
-URL_SERVER=https://bimbel.fungsional.id/server/api
-URL_CLIENT=https://bimbel.fungsional.id
+URL_SERVER=https://fungsional.ujian.or.id/server/api
+URL_CLIENT=https://fungsional.ujian.or.id
 
 
 # SMTP_SERVICE=gmail
@@ -35,7 +35,7 @@ SMTP_PASSWORD=Viracun2024
 #SMTP_PASSWORD="favpgmhxbsausibd"
 #SMTP_USERNAME=TemanASN
 
-TRIPAY_LINK=https://tripay.co.id/api-sanbox
+TRIPAY_LINK=https://tripay.co.id/api-sandbox
 TRIPAY_PRIVATE_KEY=n3Xq6-ACznD-HVKCw-UDheP-fDIFf
 TRIPAY_MERCHANT_CODE=T17133
 TRIPAY_API_KEY=DEV-Mw0X24wAGYwvEWoM83Mpm0OQPtLHa1PY3N6S72CI
