--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
     "express": "~4.16.1",
+    "google-auth-library": "^10.5.0",
     "helmet": "^7.1.0",
     "html-to-text": "^9.0.5",
     "http-status-codes": "^2.3.0",
